REplace uglify-js witrh uglify-es
This is needed to support arrow functions.

Commit replicated from here:
https://github.com/dahnielson/parcel-plugin-workbox/pull/16/commits/6a7db6fc82666fb47b0d42ba8f970f9f7c8c31a0

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "private": false,
   "dependencies": {
-    "uglify-js": "^3.4.0",
+    "uglify-es": "^3.3.9",
     "workbox-build": "^4.2.0"
   },
   "peerDependencies": {
